<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    >

    <Button
        android:id="@+id/setting_back"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/ip_label"
        android:layout_marginTop="10dp"
        android:text="@string/ip_addr"
        android:layout_below="@id/setting_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/txt_addr"
            android:layout_below="@id/ip_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/cacheing"
        android:layout_marginTop="5dp"
        android:text="@string/network_cacheing"
        android:layout_below="@id/txt_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/network_caching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/cacheing"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/caching_lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caching_lowest" />

        <RadioButton
            android:id="@+id/caching_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caching_low" />

        <RadioButton
            android:id="@+id/caching_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caching_normal" />

        <RadioButton
            android:id="@+id/caching_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caching_high" />

        <RadioButton
            android:id="@+id/caching_higher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caching_higher" />
    </RadioGroup>


    <Button
        android:id="@+id/scan_barcode"
        android:text="@string/scan_barcode"
        android:layout_below="@id/network_caching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/login_key"
        android:layout_marginTop="10dp"
        android:layout_below="@id/network_caching"
        android:layout_toRightOf="@id/scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
